# Mildoc

./: .gitignore  README.md  pyproject.toml  临时需要存的文件.md
llamaindex_/: .gitignore  README.md  将PDF转MD文件.py
llamaindex_/app/: main.py  schemas.py
llamaindex_/config/: settings.py
llamaindex_/core/: application.py  documentManager.py  events.py  ingestion.py  pdfProcessor.py  pdf_parser.py  workflow.py
llamaindex_/test/: evaluate_rag.py  test.py  解析PDF为markdown文件.py
llamaindex_/utils/: logger.py
mildoc_admin/: admin_app.py
mildoc_evolution/: USAGE_GUIDE.md  __init__.py  chunk_metrics.py  config.py  data_loader.py  document_converter.py  main.py  ragas_evaluator.py  requirements.txt  test_chunk_metrics.py
mildoc_evolution/documents/: 【全球计算联盟GCC】向量数据库白皮书.txt  人事管理流程.txt  劳动法.txt  此文件转为测试用.txt  笔记资料2.txt  财务管理文档.txt
mildoc_evolution/ragas_output/: ragas_evaluation_result_20260423_231749.json  ragas_evaluation_result_20260423_232924.json  ragas_evaluation_result_20260423_233151.json  ragas_evaluation_result_20260424_102610.json
mildoc_evolution/test_data/: ragas_format_testset.json  ragas_format_testset_with_chunks.json
mildoc_index/: embedding.py  main.py  milvus_api.py  minio_event_handler.py  oss_event_handler.py  verify_docs.py
mildoc_index/parser/: document_parser.py  markdown_parser.py  mineru_parser.py  office_parser.py  pdf_parser.py  text_parser.py  (+1 more)
mildoc_milvus/: run_attu
mildoc_wxkf/: WXBizMsgCrypt.py  config.py  cursor_manager.py  evaluate_rag.py  kf_message_handler.py  rag_service.py  rerank_service.py  wecom_api.py  wxkf_callback_app.py
(+16 files in other folders)
