[project]
name = "mildoc"
version = "1.1.0"
description = "企业知识库管理系统。"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "alibabacloud-oss-v2==1.2.1",
    "aliyun-mns-sdk==1.3.0",
    "av==16.0.1",
    "certifi>=2026.1.4",
    "flask==3.1.2",
    "flask-login==0.6.3",
    "gunicorn==23.0.0",
    "langchain==1.1.3",
    "langchain-community==0.4.1",
    "langchain-core==1.2.0",
    "langchain-milvus==0.3.1",
    "langchain-openai==1.1.3",
    "langchain-text-splitters==1.1.0",
    "langfuse==3.12.0",
    "markitdown[docx,pdf,pptx,xls,xlsx]==0.1.4",
    # "mineru[core]==2.7.0",
    "mineru[core]==2.7.0",
    "minio==7.2.20",
    "openai==2.11.0",
    "pycryptodome==3.23.0",
    "pymilvus==2.6.5",
    "pypdf2==3.0.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "requests==2.32.5",
    # RAGAS评估框架依赖
    "ragas>=0.1.10",
    "datasets>=2.15.0",
    "pandas>=2.1.0",
    "oss2>=2.18.0",
    "markdown>=3.5.0",
    "rapidfuzz>=3.14.0",
]


[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
